--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@ https://www.tooplate.com/view/2127-little-fashion
                                             <a href="product-detail.html" class="product-title-link">Team Website</a>
                                         </h5>
 
-                                        <p class="product-p">Original package design from house</p>
+                                        <p class="product-p">Html, Css</p>
                                     </div>
                                 </div>
                             </div>
@@ -341,7 +341,7 @@ https://www.tooplate.com/view/2127-little-fashion
                                             <a href="product2-detail.html" class="product-title-link">Ruang Coding Website</a>
                                         </h5>
 
-                                        <p class="product-p">Costume Package</p>
+                                        <p class="product-p">Html, Css</p>
                                     </div>
                                 </div>
                             </div>
@@ -359,7 +359,7 @@ https://www.tooplate.com/view/2127-little-fashion
                                             <a href="product3-detail.html" class="product-title-link">Library Website</a>
                                         </h5>
 
-                                        <p class="product-p">Nature made another world</p>
+                                        <p class="product-p">Html, Css, Php</p>
                                     </div>
                                 </div>
                             </div>
