--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <meta name="author" content="">
 
         <title>Haikal's Portfolio</title>
-        <link rel="icon" href="images/Logoo.png" type="image/png">
+        <link rel="icon" href="images/HP.png" type="image/png">
 
         <!-- CSS FILES -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
