--- a/product4-detail.html
+++ b/product4-detail.html
@@ -11,7 +11,7 @@
         <link rel="icon" href="images/Logoo.png" type="image/png">
         
         <!-- CSS FILES -->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="icon" href="images/HP.png" type="image/png">
 
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
